--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,12 @@ trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
 indent_size = 2
+
+[*.html]
+indent_style = space
+indent_size = 4
+
+
+[*.blade.php]
+indent_style = space
+indent_size = 4
